tests/language_modules/03_import_resolution/fixtures/invalid/imported_module_name_mismatch/Banking/Proofs.vf
module Banking.WrongProofs

procedure helper()
is
    check true
end helper

end Banking.WrongProofs